# Trace

./: .env.example  .gitignore  FEATURES.md  IDENTITY.md  README.md  RELEASE_CHECKLIST.md  TESTING.md  USER.md  ab-design-compare.html  design-focus-mode-options.html  design-system-preview.html  design-wireframes-v2.html  design-wireframes.html  docker-compose.yml  dual-layer-preview.html  eslint.config.js  index.html  melegal-research.md  package-lock.json  package.json  playwright.config.ts  preview.html  resume-version-1.md  resume-version-2.md  resume-version-3.md  tailwind.config.js  theme-preview.html  vite.config.ts  work_tracker.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
.openclaw/: workspace-state.json
arno-pinyin/: README.md
arno-pinyin/backend/: app.py  config.example.py  requirements.txt
arno-pinyin/frontend/: index.html
astro-zodiac/: README.md  generate-xiaohongshu.py  xiaohongshu-guide.md
astro-zodiac/templates/: cover-template.md
backend/: Dockerfile  __init__.py  app.py  config.example.py  requirements.txt
backend/ai/: __init__.py  analysis.py  classification.py  client.py
backend/config/: settings.py
backend/core/: __init__.py  auth.py  config.py  sync.py
backend/models/: __init__.py  database_models.py  orm_models.py
backend/services/: __init__.py  ai_client.py  hr_service.py  pet_service.py  sms.py  task_service.py  team_service.py  timeblock_service.py  track_service.py  user_service.py  wechat_auth.py  wechat_pay.py
backend/tests/: test_auth_payment.py
design preview/: design-spec-preview.html
docs/: DEPLOYMENT.md  DESIGN_SYSTEM.md  EXECUTION_GUARDIAN_BLUEPRINT.md  IMPLEMENTATION_PLAN_V2.md  SECURITY_AND_RELEASE.md  TRACE_PAGE_DESIGN_SPEC_ae516f8b_副本.md  Untitled-1.css  WORK_TRACKER.md  aurum-main-design-20260320-161748.md  aurum-main-test-plan-20260320-163740.md  melegal-legal-review-2026.md
legal-ai-mini/: README.md
memory/: 2026-03-17.md  2026-03-18.md
merize uiux 截图/: Tracking Rule Package Default Export.csv
playwright-report/: index.html
reports/: 10-foreign-product-localization-cn.md  10-high-success-light-asset-projects.md  12-projects-expert-review.md  product-mind-maps.md
rize-chinese/: .env.example  README.md  vite.config.ts
rize-chinese/src-tauri/: Cargo.toml
scripts/: verify-release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  dns_block.rs  main.rs
src-tauri/src/broadcast/: mod.rs
src-tauri/src/feature_flags/: mod.rs
src-tauri/src/idle_detection/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/pomodoro/: mod.rs
src/hooks/: index.ts  (+4 more)
test-results/: .last-run.json
(+216 files in other folders)
