[package]
name = "trace"
version = "1.0.0"
description = "Trace 时迹 - AI 自动时间追踪工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [ ] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "macros", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "std"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
x-win = "5.5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
tracing = "0.1"

# Idle detection platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.23"
io-kit-sys = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.2"
x11-dl = "2.2"
x11-screensaver = "0.3"
